--- a/index.html
+++ b/index.html
@@ -24,32 +24,21 @@
 <body>
     <div id="wrapper">
         <!-- Navigation -->
-             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> 
-                <a class="navbar-brand" href="index.html"></a> 
-                </div>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="navbar-brand" href="index.html"></a>
+            </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-
-
-                <li id="user-info" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" id="nickname"><i class="fa fa-user"></i><b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li> <a><i class="fa fa-fw fa-user"></i> Profile</a> </li>
-                        <li> <a><i class="fa fa-fw fa-gear"></i> Settings</a> </li>
-                        <li class="divider"></li>
-                        <li> <a id="btn-logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
-                    </ul>
-                </li>
                 <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
-
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li> <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a> </li>
-                    <li> <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-bars fa-1x" aria-hidden="true"></i> Categorias <i class="fa fa-fw fa-caret-down"></i></a>
+                    <li> <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-bars fa-1x" aria-hidden="true"></i> Tags populares <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li> <a href="#">Inglip</a> </li>
                             <li> <a href="#">Yaoming</a> </li>
@@ -60,14 +49,7 @@
                             <li> <a href="#">Feels good man</a> </li>
                         </ul>
                     </li>
-                    <li> <a href="javascript:;" data-toggle="collapse" data-target="#perfil"><i class="fa fa-info-circle fa-1x" aria-hidden="true"></i> Perfil <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="perfil" class="collapse">
-                            <li> <a href="perfil_resumen.html">Resumen</a> </li>
-                            <li> <a href="perfil_publicaciones.html">Publicados</a> </li>
-                            <li> <a href="perfil_fav.html">Favoritos</a> </li>
-                            <li> <a href="perfil_seguimientos2.html">Seguidos</a> </li>
-                        </ul>
-                    </li>
+                    <li><a href="perfil_resumen.html"><i class="fa fa-info-circle fa-1x" aria-hidden="true"></i> Perfil</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -77,12 +59,12 @@
                 <h1>¡Bienvenido a CuantoMeme!</h1>
                 <hr>
                 <div class="container-fluid">
-                   <div class="col-md-1"></div>
+                    <div class="col-md-1"></div>
                     <div class="col-md-9">
                         <div class="jumbotron">
                             <p>Autor: <small><a href="#">Pepito95</a></small></p>
                             <h1>Sí, sí , veterinario.</h1> <img class="img-responsive" src="../img/vinetas/vineta5.png">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla.</p>
                             <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                             <div id="social" class="row">
                                 <hr>
@@ -102,7 +84,7 @@
                         <div class="jumbotron">
                             <p>Autor: <small><a href="#">Pepito95</a></small></p>
                             <h1>True story :-(</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                             <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                             <div id="social" class="row">
                                 <hr>
@@ -122,7 +104,7 @@
                         <div class="jumbotron">
                             <p>Autor: <small><a href="#">Pepito95</a></small></p>
                             <h1>Mañana se me pasa!</h1> <img class="img-responsive" src="../img/vinetas/vineta2.jpg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                             <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                             <div id="social" class="row">
                                 <hr>
@@ -162,7 +144,7 @@
                         <div class="jumbotron">
                             <p>Autor: <small><a href="#">Pepito95</a></small></p>
                             <h1>Vida injusta...Siempre igual.</h1> <img class="img-responsive" src="../img/vinetas/vineta3.jpg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                             <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                             <div id="social" class="row">
                                 <hr>
