--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/index2.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/index2.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="login">
+<form action="login" method="post">
 
  <p>Username</p>
  <input type='text' name='username'/> 
