--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/signup.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/signup.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="registro">
+<form action="registro" method="post">
  <p>Username</p>
  <input type='text' name='username'/> 
  <p>Password</p>
