--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/login.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/login.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="login">
+<form action="/login">
   <p>Saludar a :</p>
   <input type='text' name='username'/> 
   <input type='password' name='password'/> 
