agregado  href para login y signup. eliminado roles ya que no se usan.  modificado html index con lo que finalmente tendrán todos

--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/login.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/static/login.html
@@ -5,6 +5,7 @@
   <input type='text' name='username'/> 
   <input type='password' name='password'/> 
   <input type='submit' value='Login'/>
+  <input type="hidden" name="_csrf" value="{{token}}"/>
 </form>
 </body>
 </html>
