--- a/CuantoMeme2.0/static/login.html
+++ b/CuantoMeme2.0/static/login.html
@@ -5,6 +5,7 @@
   <input type='text' name='username'/> 
   <input type='password' name='password'/> 
   <input type='submit' value='Login'/>
+  <input type="hidden" name="_csrf" value="{{token}}"/>
 </form>
 </body>
 </html>
