--- a/CuantoMeme2.0/static/signup.html
+++ b/CuantoMeme2.0/static/signup.html
@@ -9,6 +9,7 @@
  <input type="email" name="email"> 
 
   <input type='submit' value='Registrarse'/>
+    <input type="hidden" name="_csrf" value="{{token}}"/>
 </form>
 </body>
 </html>
