--- a/CuantoMeme/src/index.html
+++ b/CuantoMeme/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="CuantoMeme.ico">
 </head>
 <body>
-  <app-root>Cargando...</app-root>
+  <app-root><img src="../../assets/spinner.gif"></app-root>
 </body>
 </html>
